# socratic-tutor-eval

./: .gitignore  API.md  KNOWN_ISSUES.md  LICENSE  README.md  ingest.py  pyproject.toml  render.yaml  requirements.txt  run_simulation.py  score.py  scorer.py  simulate.py  student_agent.py  student_evaluator.py  students.yaml  summary.html  visualize.html
configs/: geodesy_novice.yaml  st_misconception.yaml  st_novice.yaml
convolearn/: __init__.py  adapter.py  domain_maps.py  import_to_webapp.py  parse.py  score_batch.py  sim_conditions.py  simulate.py
convolearn/results/: domain_maps.json  sampled_dialogues.json  scored_results copy.json  scored_results.json  summary.json
data/: junyi_kg.json
docs/: API.md  README.md  architecture.md  convolearn.md  evaluation.md  evaluation_plan.md  implementation_plan.md  overview.md  project_state.md  transcript_analysis.md
docs/plans/: convolearn_eval_plan.md  import_sessions.md  multi_condition_simulation.md
legacy/: orchestrator.py  student_agent.py  student_evaluator.py
runs/: 20260224_203614_adaptive.jsonl  20260225_171629_student_tabula_rasa.jsonl
simulation/: run.py
tests/convolearn/: test_adapter.py  test_parse.py  test_score_batch.py
tests/tutor_eval/: test_analyzer.py  test_bkt.py  test_domain_profile.py  test_ingestion.py  test_session.py  test_socratic_tutor.py
tests/webapp/: test_api.py  test_wikipedia.py
tutor_eval/: session.py  simulation.py
tutor_eval/evaluation/: analyzer.py  bkt.py  metrics.py
tutor_eval/ingestion/: __init__.py  converter.py  domain_resolver.py  (+1 more)
webapp/: app.py  config.py
(+33 files in other folders)
